--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-# This file is required for HuggingFace Spaces Docker deployment
-# The actual dependencies are managed by package.json
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+jinja2==3.1.2
+pdfkit==1.0.0
+chromadb==0.4.18
+sentence-transformers==2.2.2
+numpy==1.24.3
+openai==1.3.7
+python-multipart==0.0.6
